# modality-tracing-rs

./: CHANGELOG.md  Cargo.toml  README.md  pile.jsonl
.github/workflows/: ci.yml
src/: lib.rs  main.rs
tracing-modality/: Cargo.toml  README.md
tracing-modality/examples/: basic.rs  collatz.rs  monitored_pipeline.rs  monitored_pipeline_mixed.rs  monitored_pipeline_timestamp_implicit.rs  monitored_pipeline_timestampy.rs  simple_multi.rs
tracing-modality/src/: ingest.rs  layer.rs  lib.rs  options.rs
tracing-modality/src/async/: layer.rs  mod.rs
tracing-modality/src/blocking/: layer.rs  mod.rs
tracing-modality/src/common/: attr_handlers.rs  ingest.rs  layer.rs  mod.rs  options.rs  timeline_lru.rs
tracing-modality/tests/: basic.rs  cheating.rs
tracing-modality/tests/common/: mod.rs
tracing-serde-modality-ingest/: Cargo.toml  README.md
tracing-serde-modality-ingest/src/: lib.rs  main.rs  options.rs
tracing-serde-subscriber/: Cargo.toml
tracing-serde-subscriber/src/: lib.rs
