[package]
name = "tracing-modality"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde_json = "1"
tokio = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-core = "0.1.27"

[dependencies.tracing-serde-modality-ingest]
# NOTE: Path dep is acceptable - inside this repo
path = "../tracing-serde-modality-ingest"

[dependencies.tracing-serde-subscriber]
# NOTE: Path dep is acceptable - inside this repo
path = "../tracing-serde-subscriber"

[dev-dependencies]
# used for "collatz" example
rand = { version = "0.8.5" }
ctrlc = "3.2.2"