[package]
name = "tracing-modality"
version = "0.1.0"
edition = "2021"
description = "This crate provides a `tracing` `Layer` (and `Subscriber`) for emitting trace data to Auxon Modality"
repository = "https://github.com/auxon/modality-tracing-rs"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
serde_json = "1"
thiserror = "1"
tokio = "1"
tracing = "0.1"
tracing-core = "0.1.27"
tracing-serde-modality-ingest = { version = "0.1", path = "../tracing-serde-modality-ingest" }
tracing-serde-subscriber = { version = "0.1", path = "../tracing-serde-subscriber" }

[dev-dependencies]
# used for some examples
rand = { version = "0.8.5" }
ctrlc = "3.2.2"
# used for pipeline example
tracing-subscriber = "0.3"
