[package]
name = "tracing-modality"
version = "0.3.0"
edition = "2021"
description = "This crate provides a `tracing` `Layer` (and `Subscriber`) for emitting trace data to Auxon Modality"
repository = "https://github.com/auxoncorp/modality-tracing-rs"
license = "Apache-2.0"

[features]
default = ["async", "blocking"]
async = []
blocking = []

[dependencies]
anyhow = "1"
dirs = "4"
duplicate = "0.4.1"
hex = "0.4"
auxon-sdk = { version = "1.0", features = ["modality"] }
once_cell = "1"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "net", "sync", "macros"] }
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = "0.3"
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
# used for some examples
rand = { version = "0.8.5" }
ctrlc = "3.2.2"
# for tests
tokio = { version = "1", features = ["rt-multi-thread"] }
