[package]
name = "tracing-serde-modality-ingest"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
once_cell = "1.12.0"
thiserror = "1"
anyhow = "1"

[dependencies.modality-ingest-protocol]
# If you get errors with this, run the following commands
#
# ```
# eval `ssh-agent`
# ssh-add ~/.ssh/YOUR-GITHUB-SSH-KEY
# ```
#
# Then try again.
git = "ssh://git@github.com/auxoncorp/modality-sdk.git"
branch = "main"

[dependencies.tracing-serde-structured]
version = "0.1"

[dependencies.tracing-serde-wire]
git = "https://github.com/jamesmunns/tracing-serde-wire"
branch = "main"
