[package]
name = "tracing-serde-modality-ingest"
version = "0.1.0"
edition = "2021"
description = "This crate is currently only meant for internal use within `tracing-modality`"
repository = "https://github.com/auxon/modality-tracing-rs"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
hex = "0.4"
modality-ingest-client = "0.1"
once_cell = "1.12.0"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing-serde-structured = "0.1"
tracing-serde-wire = "0.1"
url = "2"
