[package]
name = "tracing-serde-modality-ingest"
version = "0.2.0"
edition = "2021"
description = "This crate is currently only meant for internal use within `tracing-modality`"
repository = "https://github.com/auxoncorp/modality-tracing-rs"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
hex = "0.4"
auxon-sdk = { version = "2", features = ["modality"] }
once_cell = "1.12.0"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing-serde-structured = "0.1"
tracing-serde-wire = "0.1"
url = "=2.5.2"
dirs = "4"
