[package]
name = "tracing-serde-subscriber"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
once_cell = "1.12.0"
parking_lot = "0.12"

tokio = "1"
anyhow = "1"

[dependencies.tracing-serde-modality-ingest]
# NOTE: Path dep is acceptable - inside this repo
path = "../tracing-serde-modality-ingest"


[dependencies.tracing-serde-wire]
git = "https://github.com/jamesmunns/tracing-serde-wire"
branch = "main"

[dependencies.tracing-core]
version = "0.1.27"

[dependencies.tracing-serde-structured]
version = "0.1.1"

[dependencies.tracing-subscriber]
version = "0.3"
