[package]
name = "tracing-serde-subscriber"
version = "0.2.0"
edition = "2021"
description = "This crate is currently only meant for internal use within `tracing-modality`"
repository = "https://github.com/auxoncorp/modality-tracing-rs"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
once_cell = "1.12.0"
parking_lot = "0.12"
tokio = "1"
tracing-core = "0.1.27"
tracing-serde-modality-ingest = { version = "0.2", path = "../tracing-serde-modality-ingest" }
tracing-serde-structured = "0.1.1"
tracing-serde-wire = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
